# gt7-telemetry-collector

./: .gitignore  Makefile  README.md  alembic.ini  graphs.py  main.py  make_telemetry_dump.py  pyproject.toml  web.py
data/: cars.json  tracks.json
migrations/: env.py
migrations/versions/: 15a323dd1d70_init_models.py  5f2dfc826727_fill_cars_and_tracks.py
src/: storage.py
src/domain/: models.py
src/receivers/: base.py  gt7.py
src/schema/: telemetry.py
src/services/: lap.py  race.py  tracker.py
src/utils/: math.py
src/utils/draw/: __init__.py
tests/: test_general_flow.py
tests/fixtures/: demonstration_uchebka__deepforest.gtdata  replay__atalanta.gtdata  replay__nurburg.gtdata
track_layouts/catalunya/grand-prix/: left.csv
track_layouts/daytona/full/: left.csv  right.csv
track_layouts/interlagos/: left.csv  right.csv
track_layouts/laguna-seca/: left.csv
track_layouts/spa/: left.csv
track_layouts/tsukuba/: left.csv
tracks/catalunya/grand-prix/: right.csv
tracks/deep-forest/: left.csv  right.csv
tracks/laguna-seca/: right.csv
tracks/red-bull-ring/full/: left.csv  right.csv
tracks/spa/: right.csv
tracks/tsukuba/: right.csv
