[project]
name = "gran-turismo-telemetry-collector"
version = "0.1.0"
description = ""
authors = [
    {name = "qpep3b"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "salsa20 (>=0.3.0,<0.4.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "sqlmodel (>=0.0.25,<0.0.26)",
    "alembic (>=1.16.5,<2.0.0)",
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.37.0,<0.38.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
ruff = "^0.13.2"
mypy = "^1.18.2"
pandas-stubs = "^2.3.2.250827"
isort = "^6.0.1"

